class AppStrings {
  static const String employeeId = 'Employee ID';
  static const String password = 'Password';
  static const String login = 'Login';
  static const String logout = 'Logout';
  static const String submit = 'Submit';
  static const String description = 'Description';
  static const String location = 'Location';
  static const String reportIssue = 'Report Issue';
  static const String myReports = 'My Reports';
  static const String error = 'An error occurred';
  static const String offline = 'Offline Mode Active';
}