...
              ),
            ),
            title: Semantics(
              label: 'New Report Page',
              header: true,
              child: Text(
                'New Report',
                style:
                    theme.textTheme.titleLarge?.copyWith(
                      color: colorScheme.brightness == Brightness.dark
                          ? Colors.white
                          : Colors.black,
                      fontWeight: FontWeight.bold,
...
                        physics: const AlwaysScrollableScrollPhysics(),
                        children: [
                          Center(
                            child: Container(
                              constraints: const BoxConstraints(maxWidth: 400),
                              child: Semantics(
                                label: 'Report Title Input',
                                textField: true,
                                child: CustomTextField(
                                  label: 'Title',
                                  initialValue: formState.title,
                                  maxLines: 1,
                                  validator: (val) {
...
                              ),
                            ),
                          ),
                          const SizedBox(height: 16),
                          // Description (twice the height)
                          Semantics(
                            label: 'Report Description Input',
                            textField: true,
                            child: Container(
                              width: MediaQuery.of(context).size.width - 32,
                              margin: const EdgeInsets.symmetric(horizontal: 0),
                              child: CustomTextField(
                                label: 'Description',
...
